[package]
name = "constella"
authors = ["Gryffon Bellish <owenbellish@gmail.com>"]
edition = "2018"
version = "0.1.0"

[dependencies]
bytemuck = "1.5.0"
libc = "0.2"
page_size = "0.4"
synchronoise = "1"

[dependencies.byteorder]
version = "1.3.4"
default-features = false

[dependencies.constella-traits]
path = "../constella-traits"

[dependencies.constella-types]
path = "../constella-types"

[dependencies.lmdb-rkv-sys]
version = "0.11"
optional = true

[dependencies.mdbx-sys]
version = "0.8"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[target.'cfg(windows)'.dependencies]
url = "2.2.0"

[dev-dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.bytemuck]
version = "1.5"
features = ["derive"]

[features]
default = ["lmdb", "serde", "bincode", "json"]

sync-read-txn = []

lmdb = ["lmdb-rkv-sys"]
mdbx = ["mdbx-sys"]

bincode = ["constella-types/bincode"]
json = ["constella-types/json"]